test/sema/typeck/class/unnamed-field-not-accessible.dora
mod m {
    pub class Foo(Int, Bool)
}

fn f(x: m::Foo): Int {
    x.0
}
